// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`simple Pagination props: showQuickJumper should render normally quick-jumper 1`] = `
<div
  class="rc-pagination-options-quick-jumper"
>
  跳至
  <input
    aria-label="页"
    type="text"
    value=""
  />
  页
</div>
`;

exports[`simple Pagination props: showQuickJumper should render normally quick-jumper with custom goButton 1`] = `
<div
  class="rc-pagination-options-quick-jumper"
>
  跳至
  <input
    aria-label="页"
    type="text"
    value=""
  />
  页
  <span>
    <li
      class="rc-pagination-simple-pager"
      title="跳至1/5"
    >
      <span>
        <button
          class="foo"
        >
          go
        </button>
      </span>
    </li>
  </span>
</div>
`;

exports[`simple Pagination props: showQuickJumper should render normally quick-jumper with goButton 1`] = `
<div
  class="rc-pagination-options-quick-jumper"
>
  跳至
  <input
    aria-label="页"
    type="text"
    value=""
  />
  页
  <span>
    <li
      class="rc-pagination-simple-pager"
      title="跳至1/5"
    >
      <button
        type="button"
      >
        确定
      </button>
    </li>
  </span>
</div>
`;

exports[`simple Pagination should support simple is readOnly value 1`] = `
<div>
  <ul
    class="rc-pagination rc-pagination-simple"
  >
    <li
      aria-disabled="true"
      class="rc-pagination-prev rc-pagination-disabled"
      title="上一页"
    >
      <button
        aria-label="prev page"
        class="rc-pagination-item-link"
        disabled=""
        type="button"
      />
    </li>
    <li
      class="rc-pagination-simple-pager"
      title="1/0"
    >
      1
      <span
        class="rc-pagination-slash"
      >
        /
      </span>
      0
    </li>
    <li
      aria-disabled="true"
      class="rc-pagination-next rc-pagination-disabled"
      title="下一页"
    >
      <button
        aria-label="next page"
        class="rc-pagination-item-link"
        disabled=""
        type="button"
      />
    </li>
  </ul>
</div>
`;
